fix font size on small screens

--- a/styles/about_styles.css
+++ b/styles/about_styles.css
@@ -120,14 +120,13 @@ a {
 
 .about-img {
   margin: auto;
-  width: 50%;
+  width: 35%;
   border-radius: 50px;
   box-shadow: 0px 5px 20px 20px black;
 }
 
 .about-text {
   padding: 50px;
-  font-size: 24px;
   line-height: 160%;
   margin-left: 3em;
 }
